package com.example.dip.demodippizzamanager.ingredients;

public class BlackOlives implements Veggies {
}
