package com.example.dip.demodippizzamanager.ingredients;

public class Eggplant implements Veggies {
}
