package com.example.dip.demodippizzamanager.ingredients;

public class FreshClams implements Clams{
}
