package com.example.dip.demodippizzamanager.ingredients;

public class FrozenClams implements Clams{
}
