package com.example.dip.demodippizzamanager.ingredients;

public class Garlic implements Veggies {
}
