package com.example.dip.demodippizzamanager.ingredients;

public class MarinaraSauce implements Sauce {
}
