package com.example.dip.demodippizzamanager.ingredients;

public class MozzarellaCheese implements Cheese{
}
