package com.example.dip.demodippizzamanager.ingredients;

public class Mushroom implements Veggies {
}
