package com.example.dip.demodippizzamanager.ingredients;

public class Onion implements Veggies {
}
