package com.example.dip.demodippizzamanager.ingredients;

public interface Pepperoni {
}
