package com.example.dip.demodippizzamanager.ingredients;

public class PlumTomatoSauce implements Sauce{
}
