package com.example.dip.demodippizzamanager.ingredients;

public class RedPepper implements Veggies {
}
