package com.example.dip.demodippizzamanager.ingredients;

public class ReggianoCheese implements Cheese{
}
