package com.example.dip.demodippizzamanager.ingredients;

public class SlicedPepperoni implements Pepperoni {
}
