package com.example.dip.demodippizzamanager.ingredients;

public class Spinach implements Veggies {
}
