package com.example.dip.demodippizzamanager.ingredients;

public class ThickCrustDough implements Dough{
}
