package com.example.dip.demodippizzamanager.ingredients;

public class ThinCrustDough implements Dough{
}
